Add truth library for testing repository

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,7 @@ dependencies {
 
     implementation deps.dagger.core
     kapt deps.dagger.compiler
+    testImplementation deps.truth
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
