--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -30,6 +30,8 @@ dependencies {
 
     implementation deps.dagger.core
 
+    testImplementation deps.truth
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
