--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,14 @@ ext.versions = [
         "targetSDK": 29,
         "dagger": "2.28.3",
         "recyclerview": "1.1.0",
+        "constraintLayout": "1.1.3",
         "truth": "1.0.1"
 ]
 
 ext.deps = [
         "androidx": [
-                "recyclerview": "androidx.recyclerview:recyclerview:${versions.recyclerview}"
+                "recyclerview": "androidx.recyclerview:recyclerview:${versions.recyclerview}",
+                "constraintLayout": "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
         ],
         "dagger": [
                 "core": "com.google.dagger:dagger:${versions.dagger}",
