--- a/build.gradle
+++ b/build.gradle
@@ -22,25 +22,28 @@ allprojects {
 }
 
 ext.versions = [
-        "compileSDK": 29,
-        "minSDK": 21,
-        "targetSDK": 29,
-        "dagger": "2.28.3",
-        "recyclerview": "1.1.0",
-        "constraintLayout": "1.1.3",
-        "truth": "1.0.1"
+        "compileSDK"        : 29,
+        "minSDK"            : 21,
+        "targetSDK"         : 29,
+        "dagger"            : "2.28.3",
+        "recyclerview"      : "1.1.0",
+        "constraintLayout"  : "1.1.3",
+        "lifecycle"         : "2.2.0",
+        "truth"             : "1.0.1"
 ]
 
 ext.deps = [
         "androidx": [
-                "recyclerview": "androidx.recyclerview:recyclerview:${versions.recyclerview}",
-                "constraintLayout": "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}"
+                "recyclerview"      : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
+                "constraintLayout"  : "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
+                "livedata"          : "androidx.lifecycle:lifecycle-livedata-ktx:${versions.lifecycle}",
+                "viewmodel"         : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
         ],
         "dagger": [
-                "core": "com.google.dagger:dagger:${versions.dagger}",
+                "core"    : "com.google.dagger:dagger:${versions.dagger}",
                 "compiler": "com.google.dagger:dagger-compiler:${versions.dagger}"
         ],
-        "truth": "com.google.truth:truth:${versions.truth}"
+        "truth"     : "com.google.truth:truth:${versions.truth}"
 
 ]
 
