--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -26,7 +26,7 @@ android {
 dependencies {
     implementation fileTree(dir: "libs", include: ["*.jar"])
 
-    implementation project(":githubapi")
+    api project(":githubapi")
 
     implementation deps.dagger.core
 
