--- a/home/build.gradle
+++ b/home/build.gradle
@@ -30,6 +30,8 @@ android {
 
 dependencies {
     implementation project(":repository")
+    implementation project(":di")
+    implementation project(":appdeps")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
