--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,7 @@ ext.versions = [
         "recyclerview"      : "1.1.0",
         "constraintLayout"  : "1.1.3",
         "lifecycle"         : "2.2.0",
+        "archTesting"       : "2.1.0",
         "truth"             : "1.0.1"
 ]
 
@@ -37,7 +38,8 @@ ext.deps = [
                 "recyclerview"      : "androidx.recyclerview:recyclerview:${versions.recyclerview}",
                 "constraintLayout"  : "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
                 "livedata"          : "androidx.lifecycle:lifecycle-livedata-ktx:${versions.lifecycle}",
-                "viewmodel"         : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}"
+                "viewmodel"         : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
+                "archtesting"     : "androidx.arch.core:core-testing:${versions.archTesting}",
         ],
         "dagger": [
                 "core"    : "com.google.dagger:dagger:${versions.dagger}",
