--- a/home/build.gradle
+++ b/home/build.gradle
@@ -43,6 +43,9 @@ dependencies {
     implementation deps.dagger.core
     kapt deps.dagger.compiler
 
+    testImplementation deps.androidx.archtesting
+    testImplementation deps.truth
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
