--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     implementation project(":githubapi")
     implementation project(":repository")
     implementation project(":appdeps")
+    implementation project(":home")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
@@ -38,6 +39,7 @@ dependencies {
 
     implementation deps.dagger.core
     kapt deps.dagger.compiler
+    implementation deps.androidx.fragment
 
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
