--- a/build.gradle
+++ b/build.gradle
@@ -30,6 +30,7 @@ ext.versions = [
         "constraintLayout"  : "1.1.3",
         "lifecycle"         : "2.2.0",
         "archTesting"       : "2.1.0",
+        "fragment"          : "1.2.4",
         "truth"             : "1.0.1"
 ]
 
@@ -39,7 +40,8 @@ ext.deps = [
                 "constraintLayout"  : "androidx.constraintlayout:constraintlayout:${versions.constraintLayout}",
                 "livedata"          : "androidx.lifecycle:lifecycle-livedata-ktx:${versions.lifecycle}",
                 "viewmodel"         : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
-                "archtesting"     : "androidx.arch.core:core-testing:${versions.archTesting}",
+                "fragment"          : "androidx.fragment:fragment-ktx:${versions.fragment}",
+                "archtesting"       : "androidx.arch.core:core-testing:${versions.archTesting}",
         ],
         "dagger": [
                 "core"    : "com.google.dagger:dagger:${versions.dagger}",
