--- a/appcomponent/build.gradle
+++ b/appcomponent/build.gradle
@@ -1,6 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'kotlin-kapt'
 
 android {
     compileSdkVersion versions.compileSDK
@@ -24,12 +25,11 @@ android {
 }
 
 dependencies {
-    api project(":repository")
-    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
+    implementation project(":appdeps")
+
+    implementation deps.dagger.core
+    kapt deps.dagger.compiler
+
+    implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
 }
