--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ ext.deps = [
                 "viewmodel"         : "androidx.lifecycle:lifecycle-viewmodel-ktx:${versions.lifecycle}",
                 "fragment"          : "androidx.fragment:fragment-ktx:${versions.fragment}",
                 "archtesting"       : "androidx.arch.core:core-testing:${versions.archTesting}",
+                "fragmenttesting"   : "androidx.fragment:fragment-testing:${versions.fragment}",
         ],
         "dagger": [
                 "core"    : "com.google.dagger:dagger:${versions.dagger}",
