--- a/home/build.gradle
+++ b/home/build.gradle
@@ -12,7 +12,7 @@ android {
         versionCode 1
         versionName "1.0"
 
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        testInstrumentationRunner "com.anikulki.daggergithub.testing.app.GitHubBrowserTestRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
 
@@ -26,6 +26,15 @@ android {
     viewBinding {
         enabled true
     }
+
+    compileOptions{
+        sourceCompatibility = 1.8
+        targetCompatibility = 1.8
+    }
+
+    kotlinOptions{
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -34,8 +43,8 @@ dependencies {
     implementation project(":appdeps")
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
-    implementation 'androidx.appcompat:appcompat:1.2.0'
 
+    implementation deps.androidx.fragment
     implementation deps.androidx.recyclerview
     implementation deps.androidx.constraintLayout
     implementation deps.androidx.viewmodel
@@ -45,7 +54,8 @@ dependencies {
 
     testImplementation deps.androidx.archtesting
     testImplementation deps.truth
-
+    androidTestImplementation deps.androidx.fragmenttesting
+    androidTestImplementation project(":testing:app")
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
