--- a/testing/app/build.gradle
+++ b/testing/app/build.gradle
@@ -1,4 +1,4 @@
-apply plugin: 'com.android.application'
+apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
 apply plugin: 'kotlin-kapt'
@@ -7,13 +7,13 @@ android {
     compileSdkVersion versions.compileSDK
 
     defaultConfig {
-        applicationId "com.anikulki.daggergithub"
         minSdkVersion versions.minSDK
-        targetSdkVersion versions.tagetSDK
+        targetSdkVersion versions.targetSDK
         versionCode 1
         versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        consumerProguardFiles "consumer-rules.pro"
     }
 
     buildTypes {
@@ -25,25 +25,17 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
-
-    implementation project(":githubapi")
-    implementation project(":appcomponent")
-    implementation project(":repository")
+    api project(":appcomponent")
     implementation project(":appdeps")
-    implementation project(":home")
+
+    implementation deps.dagger.core
+    kapt deps.dagger.compiler
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
-    implementation deps.dagger.core
-    kapt deps.dagger.compiler
-    implementation deps.androidx.fragment
-
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
+    implementation 'androidx.test.ext:junit:1.1.1'
+    implementation 'androidx.test.espresso:espresso-core:3.2.0'
 
 }
