--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ ext.versions = [
         "lifecycle"         : "2.2.0",
         "archTesting"       : "2.1.0",
         "fragment"          : "1.2.4",
+        "coroutines"        : "1.3.6",
+        "retrofit"          : "2.8.1",
+        "moshi"             : "1.9.2",
         "truth"             : "1.0.1"
 ]
 
@@ -45,12 +48,35 @@ ext.deps = [
                 "fragmenttesting"   : "androidx.fragment:fragment-testing:${versions.fragment}",
         ],
         "dagger": [
-                "core"    : "com.google.dagger:dagger:${versions.dagger}",
-                "compiler": "com.google.dagger:dagger-compiler:${versions.dagger}"
+                "core"      : "com.google.dagger:dagger:${versions.dagger}",
+                "compiler"  : "com.google.dagger:dagger-compiler:${versions.dagger}"
         ],
-        "truth"     : "com.google.truth:truth:${versions.truth}"
+        "coroutines": [
+                "android"   : "org.jetbrains.kotlinx:kotlinx-coroutines-android:${versions.coroutines}",
+                "test"      : "org.jetbrains.kotlinx:kotlinx-coroutines-test:${versions.coroutines}"
+        ],
+        "moshi"     : [
+                "core"      : "com.squareup.moshi:moshi:${versions.moshi}",
+                "kotlin"    : "com.squareup.moshi:moshi-kotlin-codegen:${versions.moshi}"
+        ],
+        "retrofit"  : [
+                "core"      : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
+                "moshi"     : "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
+        ],
+        "truth"             : "com.google.truth:truth:${versions.truth}"
 
 ]
+
+subprojects {
+    plugins.withType(com.android.build.gradle.BasePlugin).whenPluginAdded {
+        android {
+            compileOptions {
+                sourceCompatibility = JavaVersion.VERSION_1_8
+                targetCompatibility = JavaVersion.VERSION_1_8
+            }
+        }
+    }
+}
 
 
 task clean(type: Delete) {
