--- a/repository/build.gradle
+++ b/repository/build.gradle
@@ -30,12 +30,15 @@ dependencies {
 
     implementation deps.dagger.core
 
+    implementation deps.coroutines.android
+
     testImplementation deps.truth
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     testImplementation 'junit:junit:4.12'
+    testImplementation project(":testing:app")
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 
