--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,7 @@ ext.versions = [
         "fragment"          : "1.2.4",
         "coroutines"        : "1.3.6",
         "retrofit"          : "2.8.1",
+        "coil"              : "0.11.0",
         "moshi"             : "1.9.2",
         "truth"             : "1.0.1"
 ]
@@ -63,6 +64,7 @@ ext.deps = [
                 "core"      : "com.squareup.retrofit2:retrofit:${versions.retrofit}",
                 "moshi"     : "com.squareup.retrofit2:converter-moshi:${versions.retrofit}"
         ],
+        "coil"              : "io.coil-kt:coil:${versions.coil}",
         "truth"             : "com.google.truth:truth:${versions.truth}"
 
 ]
