--- a/details/build.gradle
+++ b/details/build.gradle
@@ -27,6 +27,9 @@ android {
         enabled = true
     }
 
+    kotlinOptions {
+        jvmTarget = JavaVersion.VERSION_1_8.toString()
+    }
 }
 
 dependencies {
@@ -44,6 +47,8 @@ dependencies {
 
     implementation deps.dagger.core
     kapt deps.dagger.compiler
+
+    implementation deps.coil
 
 
     implementation 'androidx.core:core-ktx:1.3.1'
