--- a/details/build.gradle
+++ b/details/build.gradle
@@ -51,6 +51,11 @@ dependencies {
     implementation deps.coil
 
 
+    testImplementation deps.androidx.archtesting
+    testImplementation deps.coroutines.test
+    testImplementation deps.truth
+    testImplementation project(":testing:app")
+
     implementation 'androidx.core:core-ktx:1.3.1'
     implementation 'androidx.appcompat:appcompat:1.2.0'
     testImplementation 'junit:junit:4.12'
