--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,13 +25,15 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: "libs", include: ["*.jar"])
 
     implementation project(":githubapi")
     implementation project(":appcomponent")
     implementation project(":repository")
     implementation project(":appdeps")
     implementation project(":home")
+    implementation project(":details")
+    implementation project(":di")
+    implementation project(":navigation")
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.3.1'
